--- a/Stocks.Cylinder/Stocks.Cylinder.csproj
+++ b/Stocks.Cylinder/Stocks.Cylinder.csproj
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{645E8753-1D07-48DE-80C3-3764A54FE6A6}</ProjectGuid>
+    <ProjectGuid>{2F798E86-4306-4F93-8588-7E3A26542B1B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CodeStack.Community.StockFit.Base</RootNamespace>
-    <AssemblyName>CodeStack.StockFit.Base</AssemblyName>
+    <RootNamespace>CodeStack.Community.StockFit.Stocks.Cylinder</RootNamespace>
+    <AssemblyName>CodeStack.StockFit.Stocks.Cylinder</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,18 +37,27 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions\EnumerableExtension.cs" />
-    <Compile Include="IGeometry.cs" />
-    <Compile Include="IStockFitExtractor.cs" />
-    <Compile Include="Math\IVectorMathService.cs" />
-    <Compile Include="Math\Structures\Point.cs" />
-    <Compile Include="Math\Structures\RotationMatrix.cs" />
-    <Compile Include="Math\Structures\TransformationMaxtrix.cs" />
-    <Compile Include="Math\Structures\Vector.cs" />
+    <Compile Include="CylinderParams.cs" />
+    <Compile Include="CylindricalStockFitExtractor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmallestEnclosingCircle.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Base\Base.csproj">
+      <Project>{645e8753-1d07-48de-80c3-3764a54fe6a6}</Project>
+      <Name>Base</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+  </Target>
+  <Target Name="AfterBuild">
+  </Target>
+  -->
 </Project>
