--- a/Sw/Sw.csproj
+++ b/Sw/Sw.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <RegisterForComInterop>true</RegisterForComInterop>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -77,9 +78,12 @@
     <Compile Include="Math\SwVectorMathService.cs" />
     <Compile Include="Math\MathUtilityEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reflection\EnumDisplayNameAttribute.cs" />
+    <Compile Include="Reflection\EnumExtension.cs" />
     <Compile Include="ServicesContainer.cs" />
     <Compile Include="SolidBodyGeometry.cs" />
     <Compile Include="RoundStockTool.cs" />
+    <Compile Include="SwStockFirGeometryAddIn.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Base\Base.csproj">
@@ -94,7 +98,16 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Icons\MainIconLarge.bmp" />
+    <EmbeddedResource Include="Icons\MainIconSmall.bmp" />
+    <EmbeddedResource Include="Icons\ToolbarLarge.bmp" />
+    <EmbeddedResource Include="Icons\ToolbarSmall.bmp" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>IF EXIST "%25Windir%25\Microsoft.NET\Framework64\v4.0.30319\regasm.exe" "%25Windir%25\Microsoft.NET\Framework64\v4.0.30319\regasm" /codebase "$(TargetPath)"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
