--- a/Sw/Sw.csproj
+++ b/Sw/Sw.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extension\BitmapHandlerExtension.cs" />
+    <Compile Include="Extension\MacroFeatureDataExtension.cs" />
     <Compile Include="Extension\ModelDocExtension.cs" />
     <Compile Include="Math\SwVectorMathService.cs" />
     <Compile Include="Math\MathUtilityEx.cs" />
@@ -90,6 +91,7 @@
     <Compile Include="Reflection\EnumExtension.cs" />
     <Compile Include="Options\RoundStockFeatureParameters.cs" />
     <Compile Include="Options\RoundStockFeatureSettings.cs" />
+    <Compile Include="Reflection\MemberInfoExtension.cs" />
     <Compile Include="RoundStockMacroFeature.cs" />
     <Compile Include="ServicesContainer.cs" />
     <Compile Include="SolidBodyGeometry.cs" />
