--- a/Sw/Sw.csproj
+++ b/Sw/Sw.csproj
@@ -35,6 +35,10 @@
       <HintPath>..\packages\Unity.5.8.6\lib\net40\CommonServiceLocator.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="SolidWorks.Interop.sldworks">
       <HintPath>thirdpty\SolidWorks.Interop.sldworks.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
@@ -52,6 +56,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -76,9 +82,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandManager\Attributes\CommandItemInfoAttribute.cs" />
     <Compile Include="Extension\BitmapHandlerExtension.cs" />
+    <Compile Include="Extension\FeatureManagerExtension.cs" />
     <Compile Include="Extension\MacroFeatureDataExtension.cs" />
     <Compile Include="Extension\ModelDocExtension.cs" />
+    <Compile Include="Extension\SelectionSet.cs" />
     <Compile Include="Math\SwVectorMathService.cs" />
     <Compile Include="Math\MathUtilityEx.cs" />
     <Compile Include="MVC\RoundStockModel.cs" />
@@ -87,6 +96,11 @@
     <Compile Include="Pmp\Attributes\PmpControlTypeAttribute.cs" />
     <Compile Include="MVC\RoundStockController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Reflection\EnumDisplayNameAttribute.cs" />
     <Compile Include="Reflection\EnumExtension.cs" />
     <Compile Include="Options\RoundStockFeatureParameters.cs" />
@@ -94,8 +108,15 @@
     <Compile Include="Reflection\MemberInfoExtension.cs" />
     <Compile Include="RoundStockMacroFeature.cs" />
     <Compile Include="ServicesContainer.cs" />
+    <Compile Include="Services\OptionsStore.cs" />
     <Compile Include="SolidBodyGeometry.cs" />
     <Compile Include="SwStockFitGeometryAddIn.cs" />
+    <Compile Include="UI\AboutForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\AboutForm.Designer.cs">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Base\Base.csproj">
@@ -115,6 +136,13 @@
     <EmbeddedResource Include="Icons\MainIconSmall.bmp" />
     <EmbeddedResource Include="Icons\ToolbarLarge.bmp" />
     <EmbeddedResource Include="Icons\ToolbarSmall.bmp" />
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\AboutForm.resx">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="Icons\FeatureIcon.bmp">
