Project is not compilable Migrating to SwEx framework Migrated the add-in and macro feature Property page migration is in progress

--- a/Sw/Sw.csproj
+++ b/Sw/Sw.csproj
@@ -31,6 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CodeStack.SwEx.AddIn">
+      <HintPath>..\..\sw-dev-tools-addin-dev\Framework\bin\Debug\CodeStack.SwEx.AddIn.dll</HintPath>
+    </Reference>
+    <Reference Include="CodeStack.SwEx.Common">
+      <HintPath>..\..\swex-common-dev\Base\bin\Debug\CodeStack.SwEx.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="CodeStack.SwEx.MacroFeature">
+      <HintPath>..\..\swex-macrofeature-dev\Base\bin\Debug\CodeStack.SwEx.MacroFeature.dll</HintPath>
+    </Reference>
+    <Reference Include="CodeStack.SwEx.PMPage">
+      <HintPath>..\..\vpages-sw-dev\Base\bin\Debug\CodeStack.SwEx.PMPage.dll</HintPath>
+    </Reference>
     <Reference Include="CommonServiceLocator, Version=2.0.3.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.5.8.6\lib\net40\CommonServiceLocator.dll</HintPath>
       <Private>True</Private>
@@ -39,20 +51,24 @@
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SolidWorks.Interop.sldworks">
-      <HintPath>thirdpty\SolidWorks.Interop.sldworks.dll</HintPath>
+    <Reference Include="SolidWorks.Interop.sldworks, Version=22.5.0.77, Culture=neutral, PublicKeyToken=7c4797c3e4eeac03, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>False</EmbedInteropTypes>
+      <HintPath>..\..\swex-common-dev\thirdpty\SolidWorks.Interop.sldworks.dll</HintPath>
     </Reference>
-    <Reference Include="SolidWorks.Interop.swconst">
-      <HintPath>thirdpty\SolidWorks.Interop.swconst.dll</HintPath>
+    <Reference Include="SolidWorks.Interop.swconst, Version=22.5.0.77, Culture=neutral, PublicKeyToken=19f43e188e4269d8, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>False</EmbedInteropTypes>
+      <HintPath>..\..\swex-common-dev\thirdpty\SolidWorks.Interop.swconst.dll</HintPath>
     </Reference>
-    <Reference Include="SolidWorks.Interop.swpublished">
-      <HintPath>thirdpty\SolidWorks.Interop.swpublished.dll</HintPath>
+    <Reference Include="SolidWorks.Interop.swpublished, Version=22.5.0.77, Culture=neutral, PublicKeyToken=89a97bdc5284e6d8, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>False</EmbedInteropTypes>
+      <HintPath>..\..\swex-common-dev\thirdpty\SolidWorks.Interop.swpublished.dll</HintPath>
     </Reference>
-    <Reference Include="solidworkstools">
-      <HintPath>thirdpty\solidworkstools.dll</HintPath>
+    <Reference Include="SolidWorksTools, Version=2.0.0.0, Culture=neutral, PublicKeyToken=bd18593873b4686d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\swex-common-dev\thirdpty\SolidWorksTools.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -82,18 +98,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandManager\Attributes\CommandItemInfoAttribute.cs" />
-    <Compile Include="Extension\BitmapHandlerExtension.cs" />
-    <Compile Include="Extension\FeatureManagerExtension.cs" />
-    <Compile Include="Extension\MacroFeatureDataExtension.cs" />
     <Compile Include="Extension\ModelDocExtension.cs" />
-    <Compile Include="Extension\SelectionSet.cs" />
     <Compile Include="Math\SwVectorMathService.cs" />
     <Compile Include="Math\MathUtilityEx.cs" />
     <Compile Include="MVC\RoundStockModel.cs" />
-    <Compile Include="MVC\RoundStockView.cs" />
+    <None Include="MVC\RoundStockView.cs" />
     <Compile Include="MVC\RoundStockViewHandler.cs" />
-    <Compile Include="Pmp\Attributes\PmpControlTypeAttribute.cs" />
+    <None Include="Pmp\Attributes\PmpControlTypeAttribute.cs" />
     <Compile Include="MVC\RoundStockController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -151,11 +162,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>IF '$(ConfigurationName)' == 'Release' GOTO :END
-(
-IF EXIST "%25Windir%25\Microsoft.NET\Framework64\v4.0.30319\regasm.exe" "%25Windir%25\Microsoft.NET\Framework64\v4.0.30319\regasm" /codebase "$(TargetPath)"
-)
-:END</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
