--- a/Sw/Sw.csproj
+++ b/Sw/Sw.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CodeStack.Community.StockFit.Sw</RootNamespace>
     <AssemblyName>CodeStack.StockFit.Sw</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,6 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <RegisterForComInterop>true</RegisterForComInterop>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -29,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CodeStack.SwEx.AddIn">
@@ -96,19 +99,23 @@
       <HintPath>..\packages\Unity.5.8.6\lib\net40\Unity.ServiceLocation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Xarial.Signal2Go">
+      <HintPath>..\..\signal-2-go-dev\Core\bin\Debug\Xarial.Signal2Go.dll</HintPath>
+    </Reference>
+    <Reference Include="Xarial.Signal2Go.Services.UserSettings">
+      <HintPath>..\..\signal-2-go-dev\Services\UserSettings\bin\Debug\Xarial.Signal2Go.Services.UserSettings.dll</HintPath>
+    </Reference>
     <Reference Include="Xarial.VPages.Framework, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\vpages-sw-dev\Base\bin\Debug\Xarial.VPages.Framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extension\ModelDocExtension.cs" />
     <Compile Include="Math\SwVectorMathService.cs" />
     <Compile Include="Math\MathUtilityEx.cs" />
     <Compile Include="MVC\RoundStockModel.cs" />
-    <None Include="MVC\RoundStockView.cs" />
+    <Compile Include="MVC\RoundStockView.cs" />
     <Compile Include="MVC\RoundStockViewHandler.cs" />
-    <None Include="Pmp\Attributes\PmpControlTypeAttribute.cs" />
     <Compile Include="MVC\RoundStockController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -116,22 +123,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="Reflection\EnumDisplayNameAttribute.cs" />
-    <None Include="Reflection\EnumExtension.cs" />
     <Compile Include="Options\RoundStockFeatureParameters.cs" />
-    <Compile Include="Options\RoundStockFeatureSettings.cs" />
-    <None Include="Reflection\MemberInfoExtension.cs" />
     <Compile Include="RoundStockMacroFeature.cs" />
     <Compile Include="ServicesContainer.cs" />
     <Compile Include="Services\OptionsStore.cs" />
     <Compile Include="SolidBodyGeometry.cs" />
     <Compile Include="SwStockFitGeometryAddIn.cs" />
-    <Compile Include="UI\AboutForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\AboutForm.Designer.cs">
-      <DependentUpon>AboutForm.cs</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Base\Base.csproj">
@@ -147,22 +144,16 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Icons\MainIconLarge.bmp" />
-    <EmbeddedResource Include="Icons\MainIconSmall.bmp" />
-    <EmbeddedResource Include="Icons\ToolbarLarge.bmp" />
-    <EmbeddedResource Include="Icons\ToolbarSmall.bmp" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\AboutForm.resx">
-      <DependentUpon>AboutForm.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Icons\FeatureIcon.bmp">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="Resources\round-stock-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\round_stock_dlg_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
