--- a/Sw/packages.config
+++ b/Sw/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net40" />
-  <package id="Unity" version="5.8.6" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net40" requireReinstallation="true" />
+  <package id="Unity" version="5.8.6" targetFramework="net40" requireReinstallation="true" />
 </packages>
