Added icons for step controls Implemented the handling of extra material for diameter Added licenses list

--- a/Sw/Sw.csproj
+++ b/Sw/Sw.csproj
@@ -157,6 +157,18 @@
   <ItemGroup>
     <None Include="Resources\round_stock_dlg_icon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Licenses.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eula.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\round-step-predefined.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\round-step-custom.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
