Updated set parameters to catch the outdated state of macro feature

--- a/Sw/Sw.csproj
+++ b/Sw/Sw.csproj
@@ -42,7 +42,7 @@
       <HintPath>..\packages\CodeStack.SwEx.Common.0.9.0\lib\net40\CodeStack.SwEx.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="CodeStack.SwEx.MacroFeature, Version=0.1.0.0, Culture=neutral, PublicKeyToken=a46023996d4724e7, processorArchitecture=MSIL">
+    <Reference Include="CodeStack.SwEx.MacroFeature, Version=0.1.1.0, Culture=neutral, PublicKeyToken=null, processorArchitecture=MSIL">
       <HintPath>..\packages\CodeStack.SwEx.MacroFeature.0.1.0-alpha\lib\net40\CodeStack.SwEx.MacroFeature.dll</HintPath>
       <Private>True</Private>
     </Reference>
